# ggwave-framing

./: .gitignore  Cargo.toml  PROTOCOL.md  README.md
docs/: 01_架构设计.md  02_代码级设计.md
examples/: encode_report.rs  generate_protocol_wavs.rs  generate_ultrasound_wavs.rs  measure_frame_sizes.rs  multi_protocol_test.rs  test_all_protocols.rs  test_audible_fast.rs  test_audible_normal.rs  test_full_report.rs  test_full_report_fastest.rs  test_protocol_with_file.rs  test_single_protocol.rs
src/: codec.rs  error.rs  framer.rs  lib.rs  protocol.rs  wav.rs
tests/: test_integration.rs
